updated results to align text to center. first try did not work correctly

--- a/frontend/src/styles/Results.css
+++ b/frontend/src/styles/Results.css
@@ -4,6 +4,7 @@
 .results-container .race-results-section {
     max-width: 1100px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* ===== CHAMPIONSHIP STANDINGS WRAPPER ===== */
@@ -17,18 +18,6 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.06);
 }
 
-
-h1 {
-    text-align: center;
-}
-
-p {
-    text-align: center;
-}
-
-.filter-section {
-    text-align: center;
-}
 
 .championship-standings h2 {
     text-align: center;
